--- a/docs/security/secure-data.mdx
+++ b/docs/security/secure-data.mdx
@@ -16,6 +16,8 @@ The data that you store in IBM Cloud&reg; is encrypted at rest by using a random
 
 Deleting a service instance removes all of the content associated with that instance, such as your jobs, results, parameters, and programs. To delete an instance, from the [Instances page,](https://quantum.cloud.ibm.com/instances) find the instance you want to remove, click its overflow menu, then click **Delete**. You will be asked to confirm the deletion.
 
+If you have a Manager role, you can also delete an individual job and its data. See more about access policies, groups, and roles in the [documentation](/docs/guides/access-groups).
+
 ## Data retention policy
 
 IBM will retain your (undeleted) data for three years while you are a current user of the service. To find information about how long data is retained by IBM after you stop using the service, see the [Qiskit Runtime data sheet](https://www.ibm.com/support/customer/csol/terms/?id=BB6EE1D06BDE11EBA199CCFE56FA6D9D), found on the IBM Terms site.
