--- a/docs/security/index.mdx
+++ b/docs/security/index.mdx
@@ -9,7 +9,7 @@ description: These topics are related to security, data handling, and compliance
 This section contains topics related to data handling, security, and compliance. 
 
 * [Use virtual private endpoints for VPC](/docs/security/virtual-private-endpoints)
-* Securing your data
+* [Securing your data](/docs/security/secure-data)
 * [Understanding your responsibilities when using Qiskit Runtime](/docs/security/responsibilities)
 * High availability
 * Data retention
