add fractional gates

--- a/docs/guides/native-gates.ipynb
+++ b/docs/guides/native-gates.ipynb
@@ -74,7 +74,7 @@
     "| [if_else](/docs/api/qiskit/qiskit.circuit.IfElseOp) | control flow for classical feedforward |\n",
     "| [measure](/docs/api/qiskit/circuit#qiskit.circuit.Measure) | |\n",
     "| [delay](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |  |\n",
-    "| | |\n",
+    "| Fractional gates | |\n",
     "\n",
     "### Eagle\n",
     "\n",
