--- a/learning/courses/general-formulation-of-quantum-information/general-measurements/naimark-theorem.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/general-measurements/naimark-theorem.ipynb
@@ -294,7 +294,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Naimatk's theorem"
+  "title": "Naimark's theorem"
  },
  "nbformat": 4,
  "nbformat_minor": 5
