Add instructions to log in

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -22,10 +22,17 @@ Your user account is associated with one or more [instances](./instances), ident
 
 ### Before you begin
 
-If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
+1. If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
    <Admonition type="note">
    You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
    </Admonition>
+1. Log in to to [IBM Quantum Platform](https://quantum.cloud.ibm.com) with an IBMid or Google account.  If you don't have one, you are guided through creating one.
+1. Make sure that the correct account and region are selected in the account switcher in the header, as shown in the following image.
+
+    The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
+
+    ![The IBM Quantum Platform header is shown.  The account switcher is to the right of the search bar.  The region switcher is to the right of the account switcher.](/docs/images/guides/cloud-setup/IQP-Header.svg 'IBM Quantum Platform header')
+
 
 ### 1. Create an instance
 
