Add other plans that can use sessions

--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -399,7 +399,7 @@
     "num_shots = 1\n",
     "\n",
     "# Evaluate the problem using a QPU via Qiskit IBM Runtime\n",
-    "# The best practice is to use a Session as shown below. This is open to users on the IBM Quantum Premium Plan.\n",
+    "# The best practice is to use a session as shown below. This is available to Premium Plan, Flex Plan, and On-Prem (IBM Quantum Platform API) Plan users.\n",
     "with Session(backend=backend) as session:\n",
     "    sampler = Sampler(mode=session)\n",
     "    dist = sampler.run([qc_ibm], shots=num_shots).result()\n",
@@ -529,7 +529,7 @@
     "num_shots = 100\n",
     "\n",
     "# Evaluate the problem using a QPU via Qiskit IBM Runtime\n",
-    "# The best practice is to use a Session as shown below. This is open to users on the IBM Quantum Premium Plan.\n",
+    "# The best practice is to use a session as shown below. This is available to Premium Plan, Flex Plan, and On-Prem (IBM Quantum Platform API) Plan users.\n",
     "with Session(backend=backend) as session:\n",
     "    sampler = Sampler(mode=session)\n",
     "    dist = sampler.run([qc_ibm], shots=num_shots).result()\n",
