--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -1033,7 +1033,7 @@
     "# sampler.options.default_shots = 1000\n",
     "\n",
     "# Start a job that will return shots for all 100 parameter value sets.\n",
-    "# The best practice is to use a Session as shown below. This is open to users on the IBM Quantum Premium Plan.\n",
+    "# The best practice is to use a session as shown below. This is available to Premium Plan, Flex Plan, and On-Prem (IBM Quantum Platform API) Plan users.\n",
     "# result_list = [None] * len(qcs)\n",
     "# real_counts_list = [None] * len(qcs)\n",
     "# with Session(backend=backend) as session:\n",
