--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -24,7 +24,7 @@
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
     "\n",
-    "This module was tested and used 8 minutes. of QPU time. This is a good-faith estimate; your actual usage may vary. Two time-consuming calculations are marked as such in header comments and can be carried out on simulators if students are short on QPU time. With those removed, the module requires only ~30 s of QPU time."
+    "This module was tested and used 8 minutes of QPU time. This is an estimate only. Your actual usage may vary. Two time-consuming calculations are marked as such in header comments and can be carried out on simulators if students are short on QPU time. With those removed, the module requires only ~30 seconds of QPU time."
    ]
   },
   {
