Get rid of unnecessary "please"s

--- a/docs/tutorials/nishimori-phase-transition.ipynb
+++ b/docs/tutorials/nishimori-phase-transition.ipynb
@@ -681,7 +681,7 @@
    "source": [
     "## Tutorial survey\n",
     "\n",
-    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_bsCKQkgzuQUQ7ky)"
    ]
