--- a/learning/courses/quantum-business-foundations/business-impacts.mdx
+++ b/learning/courses/quantum-business-foundations/business-impacts.mdx
@@ -65,7 +65,7 @@ HSBC is working with IBM to accelerate quantum computing readiness. HSBC is plan
 
 *   Explore quantum computing use cases for financial services by reading this report from the IBM Institute for Business Value: [“Exploring Quantum Computing Use Cases for Financial Services.”](https://www.ibm.com/thought-leadership/institute-business-value/report/exploring-quantum-financial)
 
-*   For an overview of the technical methods of quantum computing applicable to finance, please see this paper by the IBM Quantum team published in *IEEE Transactions of Quantum Engineering*: [“Quantum Computing for Finance: State-of-the-Art and Future Prospects.”](https://doi.org/10.1109/TQE.2020.3030314)
+*   For an overview of the technical methods of quantum computing applicable to finance, refer to this paper by the IBM Quantum team published in *IEEE Transactions of Quantum Engineering*: [“Quantum Computing for Finance: State-of-the-Art and Future Prospects.”](https://doi.org/10.1109/TQE.2020.3030314)
 
 ## Healthcare and life sciences
 
