--- a/learning/courses/quantum-business-foundations/start-your-quantum-journey.mdx
+++ b/learning/courses/quantum-business-foundations/start-your-quantum-journey.mdx
@@ -9,7 +9,7 @@ description: provides opportunities to learn about potential industry applicatio
 
 This training is designed for both experts and non-experts who want to learn the basics of quantum computing to accelerate applications in their organization. It provides opportunities to learn about potential industry applications, quantum computing core concepts, and IBM Quantum products and services.
 
-Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_9vIQj1FJDUMGpcG), which is important to help improve our content offerings and user experience.
+Before beginning, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_9vIQj1FJDUMGpcG), which is important to help improve our content offerings and user experience.
 
 #### Tips for navigating this course
 
