--- a/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
@@ -1610,7 +1610,7 @@
    "id": "1f689582-b474-46aa-aa9f-208428db538a",
    "metadata": {},
    "source": [
-    "You can see that in the transpilation the circuit was rewritten using new gates. For more on the ECR gate, please refer this [documentation](/docs/api/qiskit/qiskit.circuit.library.ECRGate#ecrgate)."
+    "You can see that in the transpilation the circuit was rewritten using new gates. For more information, refer to the [ECRGate](/docs/api/qiskit/qiskit.circuit.library.ECRGate#ecrgate) documentation."
    ]
   },
   {
