--- a/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
@@ -458,7 +458,7 @@
    "source": [
     "### Exercise 2: Estimate $r_y$ value\n",
     "Using the same logical arguments as before, we can rotate the system prior to measurement to learn about the $r_y$.\n",
-    "Try writing code yourself to estimate the value of $r_y$ using the quantum state tomography. You could start with the previous example, but make different rotations. (For more information about the various gates used, including ```sdg```, please refer [to the API reference.](/docs/api/qiskit/qiskit.circuit.library.SdgGate)\n",
+    "Try writing code yourself to estimate the value of $r_y$ using the quantum state tomography. You could start with the previous example, but make different rotations. (For more information about the various gates used, including ```sdg```, refer [to the API reference.](/docs/api/qiskit/qiskit.circuit.library.SdgGate))\n",
     "\n",
     "__Solution__:"
    ]
@@ -1460,7 +1460,7 @@
     "\\frac {|10\\rangle - |01\\rangle}{\\sqrt 2} \\rightarrow CX_{01}\\otimes H_0 \\rightarrow -|11\\rangle\n",
     "$$\n",
     "\n",
-    "Please note that a negative sign of $-|11\\rangle$ is global phase, so it is not measurable."
+    "Note that a negative sign of $-|11\\rangle$ is global phase, so it is not measurable."
    ]
   },
   {
@@ -1470,7 +1470,7 @@
    "source": [
     "### 5.2 Quantum circuit simulating the superdense coding\n",
     "\n",
-    "Based on the protocol of superdense coding, you can build the superdense coding circuit as below. Please try to change the message, `msg`, which Alice wants to transform to Bob."
+    "Based on the protocol of superdense coding, you can build the superdense coding circuit as below. Try to change the message, `msg`, which Alice wants to transform to Bob."
    ]
   },
   {
