--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -29,7 +29,7 @@
     "## Background\n",
     "\n",
     "This notebook introduces advanced techniques to improve the performance of the **Quantum Approximate Optimization Algorithm (QAOA)** with a large number of qubits.\n",
-    "Please see [Solve utility-scale quantum optimization problems](/docs/tutorials/quantum-approximate-optimization-algorithm) for an introduction to QAOA.\n",
+    "See [Solve utility-scale quantum optimization problems](/docs/tutorials/quantum-approximate-optimization-algorithm) for an introduction to QAOA.\n",
     "\n",
     "The advanced techniques in this notebook include:\n",
     "\n",
@@ -1314,7 +1314,7 @@
    "source": [
     "## Tutorial survey\n",
     "\n",
-    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cZwpScxyXVDpIeq)"
    ]
