--- a/docs/tutorials/probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/probabilistic-error-amplification.ipynb
@@ -1435,7 +1435,7 @@
    "source": [
     "## Tutorial survey\n",
     "\n",
-    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_9z7nltLeb5cX9Cm)"
    ]
