--- a/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, please see the [lesson on Hamiltonians](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out."
+    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, see the [lesson on Hamiltonians](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out."
    ]
   },
   {
