--- a/learning/courses/quantum-diagonalization-algorithms/introduction.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/introduction.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "## Overview and motivation\n",
     "\n",
-    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_cIogX9QqSLpEh5s), which is important to help improve our content offerings and user experience.\n",
+    "Before beginning, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_cIogX9QqSLpEh5s), which is important to help improve our content offerings and user experience.\n",
     "\n",
     "Welcome to Quantum Diagonalization Algorithms!\n",
     "\n",
