--- a/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "*Approximate QPU time to run this first experiment is 12 m 30 s. There is an additional experiment below that requires approximately 4 m.*\n",
     "\n",
-    "(Note: this notebook might not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
+    "(Note: this notebook might not evaluate in the time allowed on the Open Plan. Be sure to use quantum computing resources wisely.)\n",
     "\n",
     "</Admonition>"
    ]
