--- a/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "072c6e01-3744-47ba-bbc5-0d0eebb80f03",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1772,7 @@
     }
    ],
    "source": [
-    "# Step 4: Postprocess the results\n",
+    "# Step 4: post-process the results\n",
     "from qiskit.visualization import plot_histogram\n",
     "\n",
     "plot_histogram(real_result[0].data.c.get_counts())"
