--- a/learning/courses/utility-scale-quantum-computing/utility-ii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-ii.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1762b191-c234-4acc-a6ea-8433a59ef3f8",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Step 4. Postprocessing\n",
+    "# Step 4. Post-processing\n",
     "fig, axes = plt.subplots(2, sharex=True)\n",
     "times = np.linspace(0, evolution_time, num_timesteps + 1)  # includes initial state\n",
     "axes[0].plot(\n",
