--- a/learning/courses/fundamentals-of-quantum-algorithms/exam.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/exam.mdx
@@ -3,7 +3,7 @@ title: Exam | Fundamentals of quantum algorithms
 description: Take a 20-question exam on the IBM Training site to test your quantum algorithms skills and receive a badge through Credly.
 ---
 
-# Exam & badge
+# Exam and badge
 
 ![A square badge stating the name of this course, intermediate level, and issued by IBM Quantum&reg;.](/learning/images/courses/fundamentals-of-quantum-algorithms/exam/badge.avif)
 
