--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
@@ -221,7 +221,7 @@ Bookmark these pages to ensure you have access to these IBM Quantum industry-lea
   * [IBM Quantum Learning](/learning) to take a course, explore teaching modules, and start experimenting with Composer (coming soon)
   * [IBM Quantum Documentation](/docs) to ensure you get the most of IBM tools and services
 * [IBM Research Blog](https://research.ibm.com/blog): Stay up to date with the latest news, research, and events from IBM Research
-* [Qiskit YouTube Channel](https://www.youtube.com/qiskit): Engaging lectures, tips & tricks, tutorials, community updates, and access to exclusive Qiskit content. [Subscribe here](http://ibm.biz/q-subscribe) for weekly Qiskit videos
+* [Qiskit YouTube Channel](https://www.youtube.com/qiskit): Engaging lectures, tips and tricks, tutorials, community updates, and access to exclusive Qiskit content. [Subscribe here](http://ibm.biz/q-subscribe) for weekly Qiskit videos
 
 Join our communities:
 * [Qiskit Slack](http://qisk.it/join-slack): Submit a request to join the Qiskit slack workspace and connect with a community of quantum computing professionals and enthusiasts
