--- a/learning/courses/quantum-chem-with-vqe/exam.mdx
+++ b/learning/courses/quantum-chem-with-vqe/exam.mdx
@@ -3,7 +3,7 @@ title: Exam | Quantum chemistry with VQE
 description: Take a 20-question exam to test your quantum chemistry skills and receive a badge from the IBM Training website.
 ---
 
-# Exam & badge
+# Exam and badge
 
 ![A square badge stating the name of this course, intermediate level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-chem-with-vqe/exam/badge.avif)
 
