--- a/learning/courses/quantum-diagonalization-algorithms/exam.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/exam.mdx
@@ -3,7 +3,7 @@ title: Exam | Quantum diagonalization algorithms
 description: Take a 20-question exam on the IBM Training site to test your quantum diagonalization algorithms skills and receive a badge through Credly.
 ---
 
-# Exam & badge
+# Exam and badge
 
 ![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
 
