--- a/learning/courses/quantum-business-foundations/exam.mdx
+++ b/learning/courses/quantum-business-foundations/exam.mdx
@@ -3,7 +3,7 @@ title: Exam | Quantum business foundations
 description: Take a 20-question exam on the IBM Training site to test your quantum business skills and receive a badge through Credly.
 ---
 
-# Exam & badge
+# Exam and badge
 
 ![A square badge stating the name of this course, foundational level, and issued by IBM Quantum.](/learning/images/courses/quantum-business-foundations/exam/badge.avif)
 
