--- a/learning/courses/quantum-machine-learning/exam.mdx
+++ b/learning/courses/quantum-machine-learning/exam.mdx
@@ -3,7 +3,7 @@ title: Exam | Quantum machine learning
 description: Take a 20-question exam on the IBM Training site to test your quantum machine learning skills and receive a badge through Credly.
 ---
 
-# Exam & badge
+# Exam and badge
 
 ![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-machine-learning/exam/badge.avif)
 
