--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -631,9 +631,9 @@
    "id": "3c6416b5-9eb1-40a4-b72c-8912df931139",
    "metadata": {},
    "source": [
-    "### Step 2 & 3: Optimize problem & execute using primitives\n",
+    "### Steps 2 and 3: Optimize problem and execute using primitives\n",
     "\n",
-    "We will construct an overlap circuit, and if we were running on a real quantum computer in this example, we would optimize it for execution as before. But in this case, we intend to step over all data points and calculate the full kernel matrix. For each pair of data vectors $\\vec{x}_i$ and $\\vec{x}_j$, we create a different overlap circuit. Thus we must optimize our circuit for each data point pair. So steps 2 & 3 would be done together in the multiple iterations.\n",
+    "We will construct an overlap circuit, and if we were running on a real quantum computer in this example, we would optimize it for execution as before. But in this case, we intend to step over all data points and calculate the full kernel matrix. For each pair of data vectors $\\vec{x}_i$ and $\\vec{x}_j$, we create a different overlap circuit. Thus we must optimize our circuit for each data point pair. So steps 2 and 3 would be done together in the multiple iterations.\n",
     "\n",
     "The code cell below does exactly the same process as before for a single data point pair. This time it is simply executed inside two `for` loops, and there is the additional line at the end `kernel_matrix[x_1,x_2] = ...` to store the results of each calculation. Note that we have leveraged the symmetry of a kernel matrix to reduce the number of calculations by 1/2. We have also simply set the diagonal elements to 1, as they should be in the absence of noise. Depending on your implementation and required precision, you could also use the diagonal elements to estimate noise or learn about it for error mitigation purposes.\n",
     "\n",
