--- a/learning/courses/quantum-safe-cryptography/exam.mdx
+++ b/learning/courses/quantum-safe-cryptography/exam.mdx
@@ -3,7 +3,7 @@ title: Exam | Practical introduction to quantum-safe cryptography
 description: Take a 20-question exam on the IBM Training site to test your quantum-safe cryptography skills and receive a badge through Credly.
 ---
 
-# Exam & badge
+# Exam and badge
 
 ![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-safe-cryptography/exam/badge.avif)
 
