--- a/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
@@ -26,7 +26,7 @@
     "* [Quantum Chemistry in the Age of Quantum Computing, Cao, et al.](https://arxiv.org/pdf/1812.09976.pdf)\n",
     "* [Quantum computational chemistry, McArdle, et al.](https://arxiv.org/pdf/1808.10402.pdf)\n",
     "\n",
-    "## VQE with Qiskit Patterns\n",
+    "## VQE with Qiskit patterns\n",
     "\n",
     "We have all the necessary components for a VQE calculation:\n",
     "\n",
@@ -34,7 +34,7 @@
     "* Ansatz\n",
     "* Classical optimizer\n",
     "\n",
-    "Now we just have to bring them together in the Qiskit Patterns framework.\n",
+    "Now we just have to bring them together in the Qiskit patterns framework.\n",
     "\n",
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
