--- a/learning/courses/utility-scale-quantum-computing/hardware.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/hardware.ipynb
@@ -234,7 +234,7 @@
    "id": "be601762",
    "metadata": {},
    "source": [
-    "Let us calculate the median of T1 times of the qubits.   Compare the result to the one shown for the device on [IBM Quantum Platfrom.](https://quantum.cloud.ibm.com/)"
+    "Let us calculate the median of T1 times of the qubits.   Compare the result to the one shown for the device on [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "source": [
     "As you can see, the errors of readout tend to be larger than those of the 2-qubit operation, which in turn tend to be larger than the 1-qubit operation.\n",
     "\n",
-    "Having understood the data structures, we are ready to calculate the median errors for the 'sx' and the 'ecr' gates. Again, compare the results with the ones shown for the device on the [IBM Quantum Platfrom.](https://quantum.cloud.ibm.com/)"
+    "Having understood the data structures, we are ready to calculate the median errors for the 'sx' and the 'ecr' gates. Again, compare the results with the ones shown for the device on the [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)"
    ]
   },
   {
