--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/introduction.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "Before beginning, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_a64TTfW8cUM9Mc6), which is important to help improve our content offerings and user experience.\n",
+    "Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_a64TTfW8cUM9Mc6), which is important to help improve our content offerings and user experience.\n",
     "\n",
     "In the \"Basics of quantum information\" course, we discussed a framework for quantum information in which quantum states are represented by quantum state vectors, operations are represented by unitary matrices, and so on.\n",
     "We then used this framework in the \"Fundamentals of quantum algorithms\" course to describe and analyze quantum algorithms.\n",
