--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Course introduction\n",
     "\n",
-    "Before beginning, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_6PadhMQiGWsxXTM), which is important to help improve our content offerings and user experience.\n",
+    "Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_6PadhMQiGWsxXTM), which is important to help improve our content offerings and user experience.\n",
     "\n",
     "Click below to hear a course introduction from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtube.com/watch?v=sVRpKhCfKRI)\n",
     "\n",
