--- a/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
+++ b/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
@@ -6,7 +6,7 @@ description: This lesson provides an introduction to this course including an ov
 
 ## Course introduction
 
-Before beginning, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_07bsNr1LgHJPgjQ), which is important to help improve our content offerings and user experience.
+Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_07bsNr1LgHJPgjQ), which is important to help improve our content offerings and user experience.
 
 This training is designed for both expert and non-expert developers who want to learn about how quantum computing poses a risk to existing cryptography as new quantum algorithms are able to break existing encryption schemes. 
 
