Low hanging fruit (#3623)
related to #3344

--- a/docs/tutorials/quantum-kernel-training.ipynb
+++ b/docs/tutorials/quantum-kernel-training.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this tutorial, we will show how to build a `Qiskit Pattern` for evaluating entries into a quantum kernel matrix used for binary classification. For more information on `Qiskit Patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on the IBM Quantum Platform](/docs/guides/serverless)."
+    "In this tutorial, we will show how to build a `Qiskit pattern` for evaluating entries into a quantum kernel matrix used for binary classification. For more information on `Qiskit patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on the IBM Quantum Platform](/docs/guides/serverless)."
    ]
   },
   {
@@ -314,7 +314,7 @@
    "id": "5b0397d6-6673-45cb-9d38-7e9faadba4a1",
    "metadata": {},
    "source": [
-    "## Deploy the Qiskit Pattern to the cloud\n",
+    "## Deploy the Qiskit pattern to the cloud\n",
     "\n",
     "To do this, move the source code above to a file, `./source/generate_kernel_entry.py`, wrap the code in a script which takes inputs returns the final solution, and finally upload it to a remote cluster using the `QiskitFunction` class from `Qiskit Serverless`. For guidance on specifying external dependencies, passing input arguments, and more, check out the [Qiskit Serverless guides](https://qiskit.github.io/qiskit-serverless/getting_started/index.html).\n",
     "\n",
@@ -344,7 +344,7 @@
    "id": "f5b1e64a-881e-459e-a425-7876e56d73de",
    "metadata": {},
    "source": [
-    "## Run the Qiskit Pattern as a managed service\n",
+    "## Run the Qiskit pattern as a managed service\n",
     "\n",
     "Once we have uploaded the pattern to the cloud, we can easily run it using the `IBMServerlessProvider` client. For simplicity, we will use an exact quantum simulator in the cloud environment, so the fidelity we calculate will be exact."
    ]
@@ -372,7 +372,7 @@
    "source": [
     "## Tutorial survey\n",
     "\n",
-    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_6xsFvUYV1pNHCqW)"
    ]
@@ -387,7 +387,7 @@
   }
  ],
  "metadata": {
-  "description": "Build a Qiskit Pattern for evaluating entries into a quantum kernel matrix used for binary classification.",
+  "description": "Build a Qiskit pattern for evaluating entries into a quantum kernel matrix used for binary classification.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
