--- a/learning/courses/quantum-machine-learning/introduction.ipynb
+++ b/learning/courses/quantum-machine-learning/introduction.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "## Overview and motivation\n",
     "\n",
-    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_8wdBVMmnHcD5zg2), which is important to help improve our content offerings and user experience.\n",
+    "Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_8wdBVMmnHcD5zg2), which is important to help improve our content offerings and user experience.\n",
     "\n",
     "Welcome to quantum machine learning!\n",
     "\n",
