--- a/learning/courses/variational-algorithm-design/variational-algorithms.ipynb
+++ b/learning/courses/variational-algorithm-design/variational-algorithms.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# Variational algorithms\n",
     "\n",
-    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_aa6PBQMyWgsgJkq), which is important to help improve our content offerings and user experience.\n",
+    "Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_aa6PBQMyWgsgJkq), which is important to help improve our content offerings and user experience.\n",
     "\n",
     "This course covers the specifics of variational algorithms and near-term hybrid quantum-classical algorithms based on the variational theorem of quantum mechanics. These algorithms can leverage the utility provided by today's non-fault-tolerant quantum computers, making them ideal candidates to achieve [quantum advantage][advantage].\n",
     "\n",
