--- a/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
+++ b/docs/tutorials/depth-reduction-with-circuit-cutting.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this tutorial, we will show how to build a `Qiskit Pattern` for cutting gates in a quantum circuit to reduce circuit depth. For more in-depth discussion on circuit cutting, visit the [circuit cutting Qiskit addon docs](https://qiskit.github.io/qiskit-addon-cutting/)."
+    "In this tutorial, we will show how to build a `Qiskit pattern` for cutting gates in a quantum circuit to reduce circuit depth. For more in-depth discussion on circuit cutting, visit the [circuit cutting Qiskit addon docs](https://qiskit.github.io/qiskit-addon-cutting/)."
    ]
   },
   {
@@ -69,7 +69,7 @@
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "We will implement our Qiskit Pattern using the four steps outlined in the [docs](/docs/guides/intro-to-patterns). In this case, we will simulate expectation values on a circuit of a certain depth by cutting gates resulting in swap gates and executing subexperiments on shallower circuits. Gate cutting is relevant for Steps 2 (optimize circuit for quantum execution by decomposing distant gates) and 4 (post-processing to reconstruct expectation values on original circuit).\n",
+    "We will implement our Qiskit pattern using the four steps outlined in the [docs](/docs/guides/intro-to-patterns). In this case, we will simulate expectation values on a circuit of a certain depth by cutting gates resulting in swap gates and executing subexperiments on shallower circuits. Gate cutting is relevant for Steps 2 (optimize circuit for quantum execution by decomposing distant gates) and 4 (post-processing to reconstruct expectation values on original circuit).\n",
     "In the first step, we'll generate a circuit from the Qiskit circuit library and define some observables.\n",
     "\n",
     "*   Input: Classical parameters to define a circuit\n",
@@ -432,7 +432,7 @@
    "source": [
     "## Tutorial survey\n",
     "\n",
-    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_2ftYFf9t72yFNIO)"
    ]
@@ -447,7 +447,7 @@
   }
  ],
  "metadata": {
-  "description": "Build a Qiskit Pattern for cutting gates in a quantum circuit to reduce circuit depth.",
+  "description": "Build a Qiskit pattern for cutting gates in a quantum circuit to reduce circuit depth.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
