--- a/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
+++ b/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
@@ -28,7 +28,7 @@
     "### What you’ll learn\n",
     "\n",
     "This tutorial is divided into two parts:\n",
-    "1. Learn to use SABRE with **Qiskit Patterns** for advanced optimization of large circuits.\n",
+    "1. Learn to use SABRE with **Qiskit patterns** for advanced optimization of large circuits.\n",
     "2. Leverage **qiskit_serverless** to maximize SABRE’s potential for scalable and efficient transpilation.\n",
     "\n",
     "You will:\n",
@@ -1325,7 +1325,7 @@
    "source": [
     "## Tutorial survey\n",
     "\n",
-    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
     "\n",
     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_d9YWUSQIAvU9HXE)"
    ]
