--- a/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
@@ -26,7 +26,7 @@
     "* [Quantum Chemistry in the Age of Quantum Computing, Cao, et al.](https://arxiv.org/pdf/1812.09976.pdf)\n",
     "* [Quantum computational chemistry, McArdle, et al.](https://arxiv.org/pdf/1808.10402.pdf)\n",
     "\n",
-    "## VQE with Qiskit Patterns\n",
+    "## VQE with Qiskit patterns\n",
     "\n",
     "We have all the necessary components for a VQE calculation:\n",
     "\n",
@@ -34,11 +34,11 @@
     "* Ansatz\n",
     "* Classical optimizer\n",
     "\n",
-    "Now we just have to bring them together in the Qiskit Patterns framework.\n",
+    "Now we just have to bring them together in the Qiskit patterns framework.\n",
     "\n",
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, please see the [lesson on Hamiltonians](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out."
+    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, see the [lesson on Hamiltonians](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out."
    ]
   },
   {
