--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_ePXDhFWwqj4Q0HY), which is important to help improve our content offerings and user experience.\n",
+    "Before beginning, please complete this short [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_ePXDhFWwqj4Q0HY), which is important to help improve our content offerings and user experience.\n",
     "\n",
     "This course is a focused introduction to the variational quantum eigensolver (VQE), including the application of VQE to chemistry. The course is intended for technical practitioners of quantum computing who are interested in applying quantum computing to chemical, biochemical, or biophysical problems. This course covers important elements of a VQE calculation, including these:\n",
     "\n",
@@ -17,14 +17,14 @@
     "* Ansatz\n",
     "* Classical optimizer\n",
     "\n",
-    "All these elements are brought together to build VQE calculations on Qiskit Runtime Primitives, primarily Estimator. For information about primitives see the [documentation](/docs/guides/primitives). In setting up a VQE calculation, we will follow the standard Qiskit Patterns framework:\n",
+    "All these elements are brought together to build VQE calculations on Qiskit Runtime Primitives, primarily Estimator. For information about primitives see the [documentation](/docs/guides/primitives). In setting up a VQE calculation, we will follow the standard Qiskit patterns framework:\n",
     "\n",
     "* Map classical inputs to a quantum problem\n",
     "* Optimize problem for quantum execution\n",
     "* Execute using Qiskit Runtime primitives\n",
     "* Post-process, return result in classical format\n",
     "\n",
-    "Some explanation of the framework will be found throughout this course, but for a complete explanation with examples of Qiskit Patterns, see [this documentation](/docs/guides/intro-to-patterns).\n",
+    "Some explanation of the framework will be found throughout this course, but for a complete explanation with examples of Qiskit patterns, see [this documentation](/docs/guides/intro-to-patterns).\n",
     "\n",
     "We recommend planning to devote approximately 6-10 hours to the completion of this course. The videos and reading are likely to take two hours to complete. The remaining time is for executing and modifying code cells, completing quiz questions, and reading linked documentation.\n",
     "\n",
