--- a/learning/courses/utility-scale-quantum-computing/hardware.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/hardware.ipynb
@@ -50,8 +50,8 @@
     "## 2. Backend and Target\n",
     "\n",
     "Qiskit provides an API to obtain the information, both static and dynamic, about a quantum device. We use a Backend instance to interface with a device, which includes a Target instance, an abstract machine model that summarizes the pertinent features such as its instruction set architecture (ISA) and any properties or constraints associated with it.\n",
-    "Let us use these backend instances to get some of the information you see on the [Compute resources](https://quantum.cloud.ibm.com/computers) page.\n",
-    "at IBM Quantum&reg; Platform.   To begin with, we create a Backend instance for a device of interest.  In the following, we pick \"ibm_kyoto\" , \"ibm_kawasaki\" or the least-busy Eagle machine. Your access to QPUs might differ; simply update the backend name accordingly."
+    "Let us use these backend instances to get some of the information you see on the [Compute resources](https://quantum.cloud.ibm.com/computers) page\n",
+    "on IBM Quantum&reg; Platform.   First, we create a backend instance for a device of interest.  In the following, we pick \"ibm_kyoto\" , \"ibm_kawasaki\" or the least busy Eagle machine. Your access to QPUs might differ; update the backend name accordingly."
    ]
   },
   {
@@ -234,7 +234,7 @@
    "id": "be601762",
    "metadata": {},
    "source": [
-    "Let us calculate the median of T1 times of the qubits.   Please compare the result to the one shown for the device on IBM Quantum Platfrom."
+    "Let us calculate the median of T1 times of the qubits.   Compare the result to the one shown for the device on [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "source": [
     "As you can see, the errors of readout tend to be larger than those of the 2-qubit operation, which in turn tend to be larger than the 1-qubit operation.\n",
     "\n",
-    "Having understood the data structures, we are ready to calculate the median errors for the 'sx' and the 'ecr' gates. Again, please compare the results with the ones shown for the device at the IBM Quantum Platfrom."
+    "Having understood the data structures, we are ready to calculate the median errors for the 'sx' and the 'ecr' gates. Again, compare the results with the ones shown for the device on the [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)"
    ]
   },
   {
