use multiverse singularity

--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -139,7 +139,7 @@
     ")\n",
     "\n",
     "# load \"Singularity Machine Learning - Classification\" function by Multiverse Computing\n",
-    "singularity = catalog.load(\"multiverse/singularity-dev\")\n",
+    "singularity = catalog.load(\"multiverse/singularity\")\n",
     "\n",
     "# generate the synthetic dataset\n",
     "X, y = make_moons(n_samples=1000)\n",
