--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -22,7 +22,7 @@
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
-    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide."
+    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud&reg; account](/docs/guides/cloud-setup) guide."
    ]
   },
   {
@@ -51,7 +51,7 @@
     "\n",
     "In some ways, measuring a superposition state is like flipping a coin: there is no way to know ahead of time which way it will land. This fundamental indeterminism is and uncomfortable aspect of quantum mechanics that even Einstein had trouble with. He famously said, “God does not play dice” about this randomness. But, as we’ll see, God in fact does play dice - and flip coins.\n",
     "\n",
-    "We’re going to think about a classical coin flip as an analogy to the measurement of a superposition state. And - by playing with a \"quantum coin\" using Qiskit and a qubit on an IBM Quantum processor - we'll quickly find the limits of that analogy."
+    "We’re going to think about a classical coin flip as an analogy to the measurement of a superposition state. And - by playing with a \"quantum coin\" using Qiskit and a qubit on an IBM&reg; quantum processor - we'll quickly find the limits of that analogy."
    ]
   },
   {
