basics of quantum info tradmarking

--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -44,7 +44,7 @@ To make the most out of this course, we recommend familiarity with basic linear 
 
 ## Exam
 
-To earn your badge for Basics of quantum information, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+To earn your badge for Basics of quantum information, take the exam at IBM&reg; Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/basics-of-quantum-information/exam)
 
