--- a/learning/courses/basics-of-quantum-information/exam.mdx
+++ b/learning/courses/basics-of-quantum-information/exam.mdx
@@ -15,7 +15,7 @@ Congratulations on completing the "Basics of Quantum Information" course by IBM!
 
 After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Basics of quantum information.
 
-The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM Training.
+The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM&reg; Training.
 
 Make sure you're ready to take the exam. If you don't receive a passing score in two attempts, the exam becomes temporarily locked.
 
