--- a/learning/courses/quantum-business-foundations/business-impacts.mdx
+++ b/learning/courses/quantum-business-foundations/business-impacts.mdx
@@ -18,7 +18,7 @@ To understand how a molecule will behave, scientists often have to synthesize it
 
 We expect quantum to have the biggest impact in areas like machine learning, the simulation of natural systems, and the creation of useful new materials.
 
-IBM is exploring industries where quantum computing is expected to show opportunity. The image below lists several use cases for a variety of industries, and the following sections of this lesson describe how some of our partners are exploring some of these use cases.
+IBM&reg; is exploring industries where quantum computing is expected to show opportunity. The image below lists several use cases for a variety of industries, and the following sections of this lesson describe how some of our partners are exploring some of these use cases.
 
 ![Use Cases](/learning/images/courses/quantum-business-foundations/business-impacts/use-cases-by-industry.avif)
 
@@ -53,7 +53,7 @@ IBM researchers developed a quantum algorithm that outperforms the traditional a
 
 ![Quadratic speedup over Monte Carlo](/learning/images/courses/quantum-business-foundations/business-impacts/quadratic_speedup.avif)
 
-According to the [“Getting Your Financial Institution Ready for the Quantum Computing Revolution”](https://www.ibm.com/thought-leadership/institute-business-value/report/quantumfinancial) report by the IBM Institute for Business Value, financial institutions explore quantum computing to dramatically speed up immensely complicated calculations and improve accuracy. To this end, IBM researchers have created a quantum finance simulator for option pricing. Using software tools and quantum algorithms developed by IBM to price options that scale better than traditional methods, members of the IBM Quantum Network experiment with finance and quantum computing.
+According to the [“Getting Your Financial Institution Ready for the Quantum Computing Revolution”](https://www.ibm.com/thought-leadership/institute-business-value/report/quantumfinancial) report by the IBM Institute for Business Value, financial institutions explore quantum computing to dramatically speed up immensely complicated calculations and improve accuracy. To this end, IBM researchers have created a quantum finance simulator for option pricing. Using software tools and quantum algorithms developed by IBM to price options that scale better than traditional methods, members of the IBM Quantum&reg; Network experiment with finance and quantum computing.
 
 JPMorgan Chase partnered IBM Quantum to [predict the price of financial options](https://ibm-research.medium.com/quantum-computing-gains-a-first-foothold-in-investment-banking-2806b280b8f) and to improve fraud detection and creditworthiness determination.
 
