--- a/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
@@ -16,7 +16,7 @@ By the end of this module, you should be able to:
 
 ## What quantum computing is—and what it isn’t
 
-Can quantum computation be accomplished on classical computers? Is quantum computing just another form of AI? Katie Pizzolato, Vice President, IBM Quantum Platform at IBM Quantum, dispels several quantum computing myths in 60 seconds.
+Can quantum computation be accomplished on classical computers? Is quantum computing just another form of AI? Katie Pizzolato, Vice President, IBM Quantum&reg; Platform at IBM Quantum, dispels several quantum computing myths in 60 seconds.
 
 <IBMVideo id="132984196" title="Katie Pizzolato, Vice President, IBM Quantum Platform at IBM Quantum, dispels several quantum computing myths in 60 seconds. She points out that quantum computers are already real and that there are some problems for which quantum computers will probably not be useful."/>
 
@@ -46,7 +46,7 @@ The power of the quantum model of computation, meanwhile, lies in its much riche
 
 One might think that the difficulty in understanding quantum computing lies in hard math, but mathematically, quantum concepts are only a little more complex than high school algebra. Quantum physics is hard because it requires internalizing ideas that are simple but counterintuitive.
 
-To get a better conversational understanding of the core concepts of quantum computing, watch this [video](https://www.youtube.com/watch?v=OWJCfOvochA) from Talia Gershon, Director of Hybrid Cloud Infrastructure at IBM Research. Gershon explains quantum computing on five levels—to a child, teen, college student, graduate student, and professional for *WIRED* magazine. Please watch up to the 06:17-minute mark; however, feel free to watch the entire video.
+To get a better conversational understanding of the core concepts of quantum computing, watch this [video](https://www.youtube.com/watch?v=OWJCfOvochA) from Talia Gershon, Director of Hybrid Cloud Infrastructure at IBM Research&reg;. Gershon explains quantum computing on five levels—to a child, teen, college student, graduate student, and professional for *WIRED* magazine. Please watch up to the 06:17-minute mark; however, feel free to watch the entire video.
 
 #### Check your understanding
 
