--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -22,7 +22,7 @@ This course is intended for students, professionals, and hobbyists in fields suc
 
 ## Exam
 
-To earn your badge for Fundamentals of quantum algorithms, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+To earn your badge for Fundamentals of quantum algorithms, take the exam at IBM&reg; Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/fundamentals-of-quantum-algorithms/exam)
 
