--- a/learning/courses/quantum-business-foundations/exam.mdx
+++ b/learning/courses/quantum-business-foundations/exam.mdx
@@ -9,11 +9,11 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 ## Post-course survey
 
-Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_9EoiWO5bbHxqUPc). Your feedback will be used to enhance our content offering and user experience. Thank you!"
+Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_9EoiWO5bbHxqUPc). Your feedback will be used to enhance our content offering and user experience. Thank you!
 
 ## Test your knowledge
 
-After completing the reading and activities in this course, click the button below to navigate to IBM Training, where you can take the badging exam for Quantum business foundations.
+After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Quantum business foundations.
 
 The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you use to register with IBM Training.
 
