--- a/learning/courses/quantum-business-foundations/index.mdx
+++ b/learning/courses/quantum-business-foundations/index.mdx
@@ -7,11 +7,11 @@ description: A free IBM course on building a foundational understanding of quant
 
 !["Hero image"](/learning/images/courses/quantum-business-foundations/hero.svg)
 
-Designed by IBM Quantum experts, this course covers the essentials of quantum computing and applications for business. Learn about this new computing paradigm, how it works, and its potential to address incredibly complex business problems. Complete the course to earn your IBM Quantum Business Foundations badge.
+Designed by IBM Quantum&reg; experts, this course covers the essentials of quantum computing and applications for business. Learn about this new computing paradigm, how it works, and its potential to address incredibly complex business problems. Complete the course to earn your IBM Quantum Business Foundations badge.
 
 ## Exam
 
-To earn your badge for Quantum business foundations, take the exam at IBM Training linked below. This exam is intended to be taken after reading the lessons in this course. Once you have passed the exam, you will be notified by Credly that you have earned a badge.
+To earn your badge for Quantum business foundations, take the exam at IBM&reg; Training linked below. This exam is intended to be taken after reading the lessons in this course. Once you have passed the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/quantum-business-foundations/exam)
 
