marking for quantum-chem

--- a/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
@@ -446,7 +446,7 @@
    "id": "deaf4bb5-032e-4d86-a517-29111acaf53f",
    "metadata": {},
    "source": [
-    "You can view the progress of your job on the IBM Quantum Platform under [Workloads](https://quantum.cloud.ibm.com/workloads)."
+    "You can view the progress of your job on the IBM Quantum&reg; Platform under [Workloads](https://quantum.cloud.ibm.com/workloads)."
    ]
   },
   {
