--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "As someone working in quantum chemistry, you probably already have your favorite software for modeling molecules, which can generate a Hamiltonian that describes your system of interest. Here, we will use code built solely on PySCF, numpy, and Qiskit. But the process of Hamiltonian preparation transfers to prepackaged solutions as well. The only difference between this approach and other software will be minor syntax differences; some of these are addressed in the \"Third-party software\" subsection to facilitate integration of existing workflows.\n",
     "\n",
-    "Generating a quantum chemistry Hamiltonian for use on IBM Quantum systems involves the following steps:\n",
+    "Generating a quantum chemistry Hamiltonian for use on IBM Quantum&reg; systems involves the following steps:\n",
     "\n",
     "1. Define your molecule (geometry, spin, active space, etc.)\n",
     "2. Generate the fermionic Hamiltonian (creation and annihilation operators)\n",
@@ -847,7 +847,7 @@
    "source": [
     "Further, [this Python notebook](https://ibm.box.com/s/fh3xele1e7k0nrgd1imivvq52hy3wz9c) contains complete sample code for migrating Hamiltonians from other software workflows into Qiskit, including the conversion above.\n",
     "\n",
-    "You should now have an arsenal of tools for obtaining the Hamiltonian you need to perform quantum chemistry calculations on IBM quantum computers."
+    "You should now have an arsenal of tools for obtaining the Hamiltonian you need to perform quantum chemistry calculations on IBM&reg; quantum computers."
    ]
   }
  ],
