marking quantum-computing-in-practice course

--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -60,7 +60,7 @@
     "This, in fact, was Richard Feynman's idea in the 1980s that first motivated an investigation into the potential of quantum computers.\n",
     "We'll have more to say about this later!\n",
     "\n",
-    "IBM researchers published a paper in 2023 that showed, for the first time, that a quantum computer can compete with state-of-the-art classical techniques for simulating a particular physical model.\n",
+    "IBM&reg; researchers published a paper in 2023 that showed, for the first time, that a quantum computer can compete with state-of-the-art classical techniques for simulating a particular physical model.\n",
     "It's results can still be matched by advanced techniques running on classical computers — but it bested brute-force algorithms,\n",
     "and it also offers a new data point to which different simulation methods (which are not exact and don't all agree in their predictions) can be compared."
    ]
@@ -227,7 +227,7 @@
     "Until very recently, if you wanted to experiment with a quantum computer, you had to build and maintain one yourself\n",
     "(usually in a sad, basement lab in a university or research facility), and you would have just a few, very noisy qubits at most.\n",
     "No longer is this the case.\n",
-    "In 2016, IBM Quantum put the first quantum processor on the cloud.\n",
+    "In 2016, IBM Quantum&reg; put the first quantum processor on the cloud.\n",
     "It had only 5 qubits and fairly high rates of errors, but we've come a long way since then.\n",
     "We'll summarize the current state of the technology in a section below.\n",
     "\n",
