marking diagonalization-algo

--- a/learning/courses/quantum-diagonalization-algorithms/exam.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/exam.mdx
@@ -15,7 +15,7 @@ Congratulations on completing this course! Please take a moment to help us impro
 
 After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Quantum diagonalization algorithms.
 
-The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM Training.
+The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM&reg; Training.
 
 Make sure you're ready to take the exam. If you don't receive a passing score in two attempts, the exam becomes temporarily locked.
 
