--- a/learning/courses/quantum-diagonalization-algorithms/sqd-implementation.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/sqd-implementation.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "Orbital rotation blocks work on a single spin species ($\\alpha$ (up-spin)/$\\beta$ (down-spin)). For each electron species, orbital rotation consists of a layer of single-qubit $R_{z}$ gates followed by a sequence of 2-qubit Given's rotation gates ($XX + YY$ gates).\n",
     "\n",
-    "The 2-qubit gates act on adjacent spin-orbitals (nearest neighbor qubits), and therefore, are implementable on IBM QPUs without the need for SWAP gates."
+    "The 2-qubit gates act on adjacent spin-orbitals (nearest neighbor qubits), and therefore, are implementable on IBM&reg; QPUs without the need for SWAP gates."
    ]
   },
   {
