machine learning marking

--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -77,7 +77,7 @@
     "In this lesson we will carry out these steps several ways to make optimal use of your time on real quantum computers. We will apply a quantum kernel method to\n",
     "* A single kernel matrix entry for data with relatively few features, using a real backend, so that we can easily follow what is happening at each step.\n",
     "* An entire data set with relatively few features, using a simulated backend, so that we can see how the quantum workstream connects with classical machine learning methods\n",
-    "* A single kernel matrix entry for data with many features, using a real quantum computer. We will not estimate an entire kernel matrix for a large dataset, in order to respect time on IBM quantum computers."
+    "* A single kernel matrix entry for data with many features, using a real quantum computer. We will not estimate an entire kernel matrix for a large dataset, in order to respect time on IBM&reg; quantum computers."
    ]
   },
   {
