--- a/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
+++ b/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
@@ -1969,7 +1969,7 @@
     "\n",
     "__Step 3:__ Execute using Qiskit (Runtime) Primitives\n",
     "* Carry out preliminary trials on simulators to debug and optimize your ansatz.\n",
-    "* Execute on an IBM quantum computer.\n",
+    "* Execute on an IBM&reg; quantum computer.\n",
     "\n",
     "__Step 4:__ Post-process, return result in classical format\n",
     "* Calculate model accuracy on training data, and on testing data.\n",
